docs: added docs comments for the swagger
