# docs/swagger.json
@@ -15,11 +15,15 @@
     "paths": {
         "/api/create": {
             "post": {
+                "description": "Creates a shortened version of the provided URL",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "urls"
                 ],
                 "summary": "Shorten a URL",
                 "parameters": [
@@ -57,11 +61,15 @@
         },
         "/api/delete": {
             "post": {
+                "description": "Deletes a shortened URL",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "urls"
                 ],
                 "summary": "Delete a shortened URL",
                 "parameters": [
@@ -108,8 +116,12 @@
         },
         "/api/list/{user_id}": {
             "get": {
+                "description": "Returns a list of URLs for the specified user ID",
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "urls"
                 ],
                 "summary": "List URLs for a specific user ID",
                 "parameters": [
@@ -152,6 +164,9 @@
                 "produces": [
                     "text/plain"
                 ],
+                "tags": [
+                    "health"
+                ],
                 "summary": "Check if the server is online",
                 "responses": {
                     "200": {
@@ -165,6 +180,10 @@
         },
         "/{shortenedUrl}": {
             "get": {
+                "description": "Redirects to the original URL from a shortened URL code",
+                "tags": [
+                    "urls"
+                ],
                 "summary": "Redirect to the original URL from a shortened URL",
                 "parameters": [
                     {
