# handlers/health.go
@@ -8,6 +8,8 @@ import (
 // HealthCheckHandler godoc
 // @Summary Check if the server is online
 // @Description Returns a message indicating the server is online
+// @Tags health
+// @operationId healthCheck
 // @Produce text/plain
 // @Success 200 {string} string "Server is online"
 // @Router /health [get]
